--- a/quick_notes_template/template/template.tex
+++ b/quick_notes_template/template/template.tex
@@ -30,7 +30,7 @@
 
 \thispagestyle{empty}
 
-{\scshape [CLASS]} \hfill {\scshape \Large Notes} \hfill {\scshape [SEMSTER] [YEAR]}
+{\scshape [CLASS]} \hfill {\scshape \Large Notes} \hfill {\scshape [SEMESTER] [YEAR]}
 \medskip
 \hrule
 \bigskip
